creating css file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name | Portfolio</title>
+    <title>Nathnael Nigussie | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -28,10 +28,17 @@
         <div class="container">
             <h2>About Me</h2>
             <p>
-                I'm a passionate <strong>mobile and web app developer</strong> specializing in creating
-                **fast, modern, and user-friendly applications**. I bring ideas to life with clean
-                code and beautiful UI/UX design.
+                I'm a passionate mobile and web app developer with expertise in building innovative and user-friendly
+                applications. With experience in Flutter, I specialize in creating cross-platform apps that deliver
+                seamless perfomance.
             </p>
+            <p>Currently, I am working on various projects, including a lyrics app and note-taking app in Flutter, as
+                well as a lock app designed to work offline. I am also skilled in backend itegration, using supabase for
+                database management.</p>
+            <p>I thrive on solving complex problems and contiously learning new technologies to to enhance my
+                development skills. Whether it's optimizing software installations on Kali Linux or developing
+                full-stack applications, I am always eager to explore and create inpactfull digital solutions.</p>
+            <p>Let's connect and build something amazing</p>
         </div>
     </section>
 
@@ -40,17 +47,17 @@
             <h2>My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="images/project1.jpg" alt="Project 1">
+                    <img src="1.jpg" alt="Project 1">
                     <h3>Project One</h3>
                     <p>Responsive website built with HTML and CSS.</p>
                 </div>
                 <div class="project-card">
-                    <img src="images/project2.jpg" alt="Project 2">
+                    <img src="1.jpg" alt="Project 2">
                     <h3>Project Two</h3>
                     <p>Mobile app UI design for a finance startup.</p>
                 </div>
                 <div class="project-card">
-                    <img src="images/project3.jpg" alt="Project 3">
+                    <img src="1.jpg" alt="Project 3">
                     <h3>Project Three</h3>
                     <p>Flutter-based eCommerce mobile app.</p>
                 </div>
@@ -67,7 +74,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Your Name. All Rights Reserved.</p>
+        <p>&copy; 2025 Nathnael Nigussie. All Rights Reserved.</p>
     </footer>
 </body>
 
