--- a/index.html
+++ b/index.html
@@ -9,10 +9,24 @@
 </head>
 
 <body>
-    <header>
-        <div class="container">
+    <header class="myheader">
+        <div class="container2">
             <h1>Nathnael Nigussie</h1>
-            <p>Mobile & Web App Developer</p>
+            <p>Mobile & Web App Developer | UX/UI Designer | Full-Stack Developer</p>
+        </div>
+        <div>
+            <ul class="ullist">
+                <li>
+                    <a class="myheaderabout" href="#projects">Projects</a>
+                </li>
+
+                <li>
+                    <a class="myheaderabout" href="#contact">Contact</a>
+                </li>
+                <li>
+                    <a class="myheaderabout" href="#about">About</a>
+                </li>
+            </ul>
         </div>
     </header>
 
@@ -44,9 +58,26 @@
                     <p>Flutter-based eCommerce mobile app.</p>
                 </div>
             </div>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <img src="1.jpg" alt="Project 4">
+                    <h3>Project One</h3>
+                    <p>Responsive website built with HTML and CSS.</p>
+                </div>
+                <div class="project-card">
+                    <img src="1.jpg" alt="Project 5">
+                    <h3>Project Two</h3>
+                    <p>Mobile app UI design for a finance startup.</p>
+                </div>
+                <div class="project-card">
+                    <img src="1.jpg" alt="Project 6">
+                    <h3>Project Three</h3>
+                    <p>Flutter-based eCommerce mobile app.</p>
+                </div>
+            </div>
         </div>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <h2 style="text-align: start;margin-bottom: 5px;">About Me</h2>
             <p style="margin-bottom: 10px; text-align: start;">
@@ -69,7 +100,7 @@
         </div>
     </section>
 
-    <section class="contact">
+    <section id="contact" class="contact">
         <div class="container">
             <h2>Contact Me</h2>
 
