--- a/index.html
+++ b/index.html
@@ -104,24 +104,27 @@
         <div class="container">
             <h2>Contact Me</h2>
 
-            <a href="https://www.linkedin.com/" target="_blank">
-                <svg width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="https://www.linkedin.com/nhttey" target="_blank">
+                <svg class="socialMedia" width="50" height="50" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M4.5 3C3.12 3 2 4.12 2 5.5S3.12 8 4.5 8C5.88 8 7 6.88 7 5.5S5.88 3 4.5 3zM2 10v11h5V10H2zm7 0v11h5V10h-5zm7 0v11h5V10h-5z"
                         fill="white" />
                 </svg>
             </a>
 
-            <a href="https://github.com/" target="_blank">
-                <svg width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="https://github.com/nathnael19" target="_blank">
+                <svg class="socialMedia" width="50" height="50" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.21 11.38.6.11.82-.26.82-.58v-2.06c-3.34.73-4.04-1.61-4.04-1.61-.55-1.39-1.33-1.76-1.33-1.76-1.09-.75.08-.73.08-.73 1.2.08 1.84 1.23 1.84 1.23 1.07 1.83 2.81 1.3 3.5.99.11-.78.42-1.3.76-1.6-2.66-.3-5.46-1.33-5.46-5.92 0-1.31.47-2.38 1.23-3.22-.12-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 013-.4c1.02 0 2.04.14 3 .4 2.3-1.55 3.3-1.23 3.3-1.23.66 1.65.24 2.87.12 3.17.76.84 1.23 1.91 1.23 3.22 0 4.6-2.8 5.62-5.47 5.92.43.37.81 1.1.81 2.22v3.29c0 .32.22.7.83.58C20.56 21.8 24 17.3 24 12c0-6.63-5.37-12-12-12z"
                         fill="white" />
                 </svg>
             </a>
 
-            <a href="https://www.instagram.com/" target="_blank">
-                <svg width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <a href="https://www.instagram.com/nhttey19" target="_blank">
+                <svg class="socialMedia" width="50" height="50" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M12 2.163c3.1 0 3.48.011 4.717.068 1.181.048 1.833.253 2.264.426.441.175.815.449 1.189.823.374.374.648.748.823 1.189.174.431.378 1.083.426 2.264.057 1.237.068 1.617.068 4.717s-.011 3.48-.068 4.717c-.048 1.181-.253 1.833-.426 2.264-.175.441-.449.815-.823 1.189-.374.374-.748.648-1.189.823-.431.174-1.083.378-2.264.426-1.237.057-1.617.068-4.717.068s-3.48-.011-4.717-.068c-1.181-.048-1.833-.253-2.264-.426-.441-.175-.815-.449-1.189-.823-.374-.374-.648-.748-.823-1.189-.174-.431-.378-1.083-.426-2.264-.057-1.237-.068-1.617-.068-4.717s.011-3.48.068-4.717c.048-1.181.253-1.833.426-2.264.175-.441.449-.815.823-1.189.374-.374.748-.648 1.189-.823.431-.174 1.083-.378 2.264-.426 1.237-.057 1.617-.068 4.717-.068zm0-2.163c-3.14 0-3.526.012-4.757.07-1.195.05-1.91.247-2.563.491-.664.244-1.191.571-1.664 1.044-.473.473-.8.999-1.044 1.664-.244.653-.441 1.368-.491 2.563-.057 1.231-.069 1.617-.069 4.757s.012 3.526.069 4.757c.05 1.195.247 1.91.491 2.563.244.664.571 1.191 1.044 1.664.473.473.999.8 1.664 1.044.653.244 1.368.441 2.563.491 1.231.057 1.617.069 4.757.069s3.526-.012 4.757-.069c1.195-.05 1.91-.247 2.563-.491.664-.244 1.191-.571 1.664-1.044.473-.473.8-.999 1.044-1.664.244-.653.441-1.368.491-2.563.057-1.231.069-1.617.069-4.757s-.012-3.526-.069-4.757c-.05-1.195-.247-1.91-.491-2.563-.244-.664-.571-1.191-1.044-1.664-.473-.473-.999-.8-1.664-1.044-.653-.244-1.368-.441-2.563-.491-1.231-.057-1.617-.069-4.757-.069zm0 6.363a5.998 5.998 0 1 0 0 11.996 5.998 5.998 0 0 0 0-11.996zm0 9.002a3.997 3.997 0 1 1 0-7.994 3.997 3.997 0 0 1 0 7.994zm5.657-10.728a1.438 1.438 0 1 1-2.876 0 1.438 1.438 0 0 1 2.876 0z"
                         fill="white" />
@@ -129,7 +132,8 @@
             </a>
 
             <a href="mailto:nathnaelnigussie19@gmail.com" target="_blank">
-                <svg width="50" height="50" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="socialMedia" width="50" height="50" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 4v16h20V4H2zm18 2v1.5l-8 5-8-5V6h16zm-16 3.5l8 5 8-5V18H4V9.5z" fill="white" />
                 </svg>
             </a>
