editing project page and adding images

--- a/index.html
+++ b/index.html
@@ -43,35 +43,35 @@
             <h2>My Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="1.jpg" alt="Project 1">
-                    <h3>Project One</h3>
-                    <p>Responsive website built with HTML and CSS.</p>
+                    <img src="2.jpg" alt="Project 1" height="150px">
+                    <h3>Calculator</h3>
+                    <p>Responsive Calculator built with HTML and CSS.</p>
                 </div>
                 <div class="project-card">
-                    <img src="1.jpg" alt="Project 2">
-                    <h3>Project Two</h3>
-                    <p>Mobile app UI design for a finance startup.</p>
+                    <img src="3.jpg" alt="Project 2">
+                    <h3>Amazon Clone</h3>
+                    <p>Amazon UI design for a finance startup.</p>
                 </div>
                 <div class="project-card">
-                    <img src="1.jpg" alt="Project 3">
-                    <h3>Project Three</h3>
-                    <p>Flutter-based eCommerce mobile app.</p>
+                    <img src="4.jpg" alt="Project 3">
+                    <h3>Restorant</h3>
+                    <p>Web-based eCommerce web app.</p>
                 </div>
             </div>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="1.jpg" alt="Project 4">
-                    <h3>Project One</h3>
-                    <p>Responsive website built with HTML and CSS.</p>
+                    <img src="2.jpg" alt="Project 4" height="150px">
+                    <h3>Calculator</h3>
+                    <p>Calculator App with Flutter framework.</p>
                 </div>
                 <div class="project-card">
-                    <img src="1.jpg" alt="Project 5">
-                    <h3>Project Two</h3>
-                    <p>Mobile app UI design for a finance startup.</p>
+                    <img src="3.jpg" alt="Project 5">
+                    <h3>Amazon</h3>
+                    <p>Mobile app UI design for a finance startup using Flutter Framework.</p>
                 </div>
                 <div class="project-card">
-                    <img src="1.jpg" alt="Project 6">
-                    <h3>Project Three</h3>
+                    <img src="4.jpg" alt="Project 6">
+                    <h3>Restorant</h3>
                     <p>Flutter-based eCommerce mobile app.</p>
                 </div>
             </div>
